--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1"
   },
   "name": "restourant-page",
   "version": "1.0.0",
@@ -91,13 +92,16 @@
     "undici-types": "^7.8.0",
     "update-browserslist-db": "^1.1.3",
     "watchpack": "^2.4.4",
-    "webpack-merge": "^6.0.1",
     "webpack-sources": "^3.3.3",
     "which": "^2.0.2",
     "wildcard": "^2.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+   "start": "webpack serve --config webpack.dev.js",
+  "build": "webpack --config webpack.prod.js",
+   
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
